# music-cli

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: cli.rs  cli_handlers.rs  main.rs  models.rs  utils.rs
src/application/: app.rs  mod.rs  state.rs
src/application/handlers/: library_handler.rs  mod.rs  playback_handler.rs  tests.rs  ui_handler.rs
src/cli_handlers/: browse.rs  context.rs  list.rs  mod.rs  path.rs  play.rs  playlist.rs  refresh.rs  search.rs  select.rs  settings.rs  sort.rs  status.rs
src/core/: events.rs  mod.rs  models.rs  traits.rs
src/modules/: mod.rs
src/modules/input/: action.rs  defaults.rs  handler.rs  key_binding.rs  key_config.rs  mod.rs  mode.rs
src/modules/playback/: mod.rs  playback_progress.rs  rodio_backend.rs  shuffle_manager.rs
src/modules/storage/: json_backend.rs  mod.rs
src/modules/ui/: key_hints.rs  mod.rs  progress_formatter.rs
src/modules/ui/input/: action.rs  handler.rs  mod.rs  mode.rs
src/modules/ui/terminal/: renderer.rs
src/modules/ui/tui/: input_handler.rs  mod.rs  renderer.rs  settings_state.rs  settings_view.rs
src/player/: audio.rs  audio_player.rs  controller.rs  mod.rs  terminal_controller.rs  tui_controller.rs
src/ui/: mod.rs  terminal.rs  tui.rs
