[package]
name = "music-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rodio = "0.19"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
dirs = "6.0.0"
anyhow = "1.0.100"
lofty = "0.22.4"
ratatui = "0.30.0"
crossbeam-channel = "0.5.15"
fuzzy-matcher = "0.3.7"
