[package]
name = "hextune"
version = "1.0.0"
edition = "2024"
description = "Lightweight terminal music player"
license = "MIT"
repository = "https://github.com/Condorbox/hextune"
homepage = "https://github.com/Condorbox/hextune"
readme = "README.md"
keywords = ["music", "player", "cli", "tui", "terminal"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rodio = "0.22.2"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
toml = "1.0.6"
walkdir = "2.5.0"
dirs = "6.0.0"
anyhow = "1.0.100"
lofty = "0.23.2"
ratatui = "0.30.0"
crossbeam-channel = "0.5.15"
fuzzy-matcher = "0.3.7"
rand = "0.10.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
